<resources>
    <string name="file_authority">com.codepath.fileprovider.NextStreet</string>
    <string name="facebook_app_id">3196493410406955</string>
    <string name="fb_login_protocol_scheme">fb3196493410406955</string>

    <string name="app_name">NextStreet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_id">selina-nextstreet</string>
    <string name="client_key">skimNextStreet</string>
    <string name="server_url">http://selina-nextstreet.herokuapp.com/parse</string>

    <string name="menu_home">Home</string>
    <string name="menu_trips">Trips</string>
    <string name="driver_menu_requests">Requests</string>
    <string name="driver_menu_profile">Profile</string>

    <string name="login_loginButton">Log in</string>
    <string name="login_signUpButton">Sign Up</string>
    <string name="login_logOutButton">Log out</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_new_password">New Password *</string>
    <string name="login_new_password_again">New Password Again *</string>
    <string name="login_new_username">New Username *</string>
    <string name="login_email">Email</string>
    <string name="login_first_name">First Name *</string>
    <string name="login_last_name">Last Name *</string>

    <string name="toast_login_err">Issue with login</string>
    <string name="toast_login_noUsers">Wrong username or password</string>
    <string name="toast_login_userScreenWrong">Must log in as a Driver</string>
    <string name="toast_login_driverScreenWrong">Must log in as a User</string>
    <string name="toast_login_succ">Success!</string>
    <string name="toast_success">Success!</string>
    <string name="toast_signup_err">Could not sign up</string>
    <string name="toast_camera_err">Picture wasn\'t taken!</string>
    <string name="toast_required_fields_err">Required fields must be filled out!</string>
    <string name="toast_match_password">Passwords must match</string>
    <string name="set_destination">Set destination!</string>
    <string name="set_origin">Set origin!</string>
    <string name="toast_desc_empt">Description should not be empty :(</string>
    <string name="toast_img_empt">Every request should have an image!</string>
    <string name="toast_dest_empt">Every request must have an origin and an ending destination!</string>
    <string name="toast_save_err">Error while saving!</string>
    <string name="toast_save_succ">Success!</string>
    <string name="toast_http_err">Connection failed</string>
    <string name="toast_driver_succ">Found driver!</string>
    <string name="toast_json_err">Error processing drivers</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="compose_description">Description</string>
    <string name="empty_string" />
    <string name="compose_camera">Submit picture of package contents</string>
    <string name="submit_package_request">Submit package request</string>

    <string name="maps_onplace_succ">Chosen!</string>
    <string name="maps_onplace_err">Couldn\'t choose place</string>
    <string name="maps_no_permissions_err">Permission not granted to go to current location</string>
    <string name="testing">testing</string>

    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="miles">miles</string>

    <string name="start_driverButton">Driver</string>
    <string name="start_userButton">User</string>
    <string name="this_is_driver_request_view">This is driver request view.</string>
    <string name="this_is_profile_fragment">This is profile fragment.</string>

    <string name="driver_adapter_selected">Selected</string>
    <string name="set_as_active">Set as Active</string>
    <string name="driver_name">No Driver Selected Yet</string>

    <string name="channel_name">NextStreet</string>
    <string name="channel_description">NextStreet Notifications on Request</string>

    <string name="notification_package_title">Recent Package Request updated</string>
    <string name="notification_newDriver_title">@string/notification_package_title</string>
    <string name="notification_newDriver_description">Driver has been found!</string>
    <string name="login_as">Login as</string>
    <string name="notification_driver_request">New request found!</string>
    <string name="notification_driver_reject">Reject?</string>
    <string name="notification_driver_accept_action">Accept?</string>
    <string name="no_past_trips">No past trips!</string>
    <string name="no_requests_currently">No requests currently!</string>
    <string name="menu_past_requests">Past Requests</string>
    <string name="profile_profilePictureButton">Take profile picture</string>

    <string name="bottom_sheet_where">Where do you want to send your package?</string>
    <string name="bottom_choose_user_instead">Choose a user to send package to instead</string>
    <string name="bottom_search_up_destination">Search up a destination</string>
    <string name="bottom_add_description_package">Add a description of the package?</string>
    <string name="bottom_add_package_image">Add an image of the package?</string>
    <string name="button_next">Next</string>
    <string name="menu_cancel">Cancel</string>

    <string name="compose_details">Compose Details</string>
    <string name="search_up_an_origin">Search up an origin</string>
    <string name="choose_home_as_origin">Choose home as origin</string>
    <string name="yes">Yes</string>
    <string name="set_starting_location">Set starting location</string>
    <string name="driver_yes">Yes</string>
    <string name="driver_no">No</string>
    <string name="ongoing">Ongoing</string>
    <string name="fulfilled">Fulfilled!</string>
    <string name="to">to</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="requests">Requests</string>
    <string name="users">Users</string>
    <string name="set_home">Set Home</string>
    <string name="location">Location:</string>
    <string name="home">home</string>

    <string name="toast_place_loading">"Place Loading"</string>
</resources>