<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowSoftInputMode="adjustPan"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_side_margins"
                android:layout_marginTop="@dimen/login_top_margin"
                android:layout_marginEnd="@dimen/login_side_margins"
                android:layout_marginBottom="@dimen/login_vertical_spacing"
                android:ems="10"
                android:hint="@string/login_first_name"
                app:layout_constraintBottom_toTopOf="@id/etLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_side_margins"
                android:layout_marginEnd="@dimen/login_side_margins"
                android:layout_marginBottom="@dimen/login_vertical_spacing"
                android:ems="10"
                android:hint="@string/login_last_name"
                app:layout_constraintBottom_toTopOf="@id/etUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFirstName" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_side_margins"
                android:layout_marginTop="@dimen/login_vertical_spacing"
                android:layout_marginEnd="@dimen/login_side_margins"
                android:ems="10"
                android:hint="@string/login_new_username"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_vertical_spacing"
                android:ems="10"
                android:hint="@string/login_new_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_vertical_spacing"
                android:ems="10"
                android:hint="@string/login_new_password_again"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_vertical_spacing"
                android:backgroundTint="@color/btn_scnd_color"
                android:text="@string/login_signUpButton"
                android:textColor="@color/btn_scnd_text_color"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_vertical_spacing"
                android:ems="10"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword2" />

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="@dimen/back_icon_size"
                android:layout_height="@dimen/back_icon_size"
                android:layout_marginStart="@dimen/back_icon_side_margin"
                android:layout_marginTop="@dimen/back_icon_side_margin"
                android:tint="@color/back_icon_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/abc_vector_test" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>