<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        android:layout_marginTop="@dimen/login_top_margin"
        android:layout_marginEnd="@dimen/login_side_margins"
        android:layout_marginStart="@dimen/login_side_margins"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintBottom_toTopOf="@id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_vertical_spacing"
        android:backgroundTint="@color/btn_color"
        android:text="@string/login_loginButton"
        android:textColor="@color/btn_text_color"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_scnd_color"
        android:text="@string/login_signUpButton"
        android:textColor="@color/btn_scnd_text_color"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <com.facebook.login.widget.LoginButton
        android:visibility="gone"
        android:id="@+id/fbSignupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_vertical_spacing"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="@dimen/back_icon_size"
        android:layout_height="@dimen/back_icon_size"
        android:layout_marginStart="@dimen/back_icon_side_margin"
        android:layout_marginTop="@dimen/back_icon_side_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        android:tint="@color/back_icon_color"/>
</androidx.constraintlayout.widget.ConstraintLayout>