<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/cancel_icon_side_margin"
        android:layout_marginTop="@dimen/cancel_icon_top_margin"
        android:tint="@color/icon_color"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/compose_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/compose_top_margin"
        android:layout_marginEnd="@dimen/compose_side_margins"
        android:layout_marginStart="@dimen/compose_side_margins"
        android:lines="3"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compose_camera"
        android:backgroundTint="@color/btn_scnd_color"
        android:textColor="@color/btn_scnd_text_color"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/compose_vertical_spacing"
        android:layout_marginEnd="@dimen/compose_side_margins"
        android:layout_marginStart="@dimen/compose_side_margins"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_package_request"
        android:backgroundTint="@color/btn_color"
        android:textColor="@color/btn_text_color"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/compose_vertical_spacing"
        android:layout_marginEnd="@dimen/compose_side_margins"
        android:layout_marginStart="@dimen/compose_side_margins"/>


</androidx.constraintlayout.widget.ConstraintLayout>